src/LPB/LPBParser.py
# Generated from LPB.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys

from antlr4.error.Errors import ParseCancellationException


class LPBParser ( Parser ):

    grammarFileName = "LPB.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'imovel'", "':'", "'fim_imovel'", "'Casa'", 
                     "'('", "'Tam'", "','", "'Andares'", "')'", "'Apartamento'", 
                     "'andar'", "'fim_andar'", "'planta'", "'fim_planta'", 
                     "'tem'", "'comodo'", "'->'", "'movel'", "'{'", "'}'", 
                     "'cozinha'", "'quarto'", "'banheiro'", "'quintal'", 
                     "'escritorio'", "'garagem'", "'sofa'", "'cama'", "'armario'", 
                     "'pia'", "'chuveiro'", "'televisao'", "'geladeira'", 
                     "'piscina'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NUM_INT", "IDENT", "ESPACO", "COMENT", 
                      "COMENT_N_FECHADO", "SIMB_DESCONHECIDO" ]

    RULE_programa = 0
    RULE_decl_imovel = 1
    RULE_decl_casa = 2
    RULE_decl_apartamento = 3
    RULE_corpo = 4
    RULE_decl_andar = 5
    RULE_decl_planta = 6
    RULE_decl_comodos = 7
    RULE_decl_moveis = 8
    RULE_id_bloco = 9
    RULE_var_comodo = 10
    RULE_tipo_comodo = 11
    RULE_tipo_movel = 12
    RULE_dimensao = 13

    ruleNames =  [ "programa", "decl_imovel", "decl_casa", "decl_apartamento", 
                   "corpo", "decl_andar", "decl_planta", "decl_comodos", 
                   "decl_moveis", "id_bloco", "var_comodo", "tipo_comodo", 
                   "tipo_movel", "dimensao" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    NUM_INT=37
    IDENT=38
    ESPACO=39
    COMENT=40
    COMENT_N_FECHADO=41
    SIMB_DESCONHECIDO=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_imovel(self):
            return self.getTypedRuleContext(LPBParser.Decl_imovelContext,0)


        def corpo(self):
            return self.getTypedRuleContext(LPBParser.CorpoContext,0)


        def getRuleIndex(self):
            return LPBParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = LPBParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(LPBParser.T__0)
            self.state = 29
            self.decl_imovel()
            self.state = 30
            self.match(LPBParser.T__1)
            self.state = 31
            self.corpo()
            self.state = 32
            self.match(LPBParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Decl_imovelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_casa(self):
            return self.getTypedRuleContext(LPBParser.Decl_casaContext,0)


        def decl_apartamento(self):
            return self.getTypedRuleContext(LPBParser.Decl_apartamentoContext,0)


        def getRuleIndex(self):
            return LPBParser.RULE_decl_imovel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_imovel" ):
                listener.enterDecl_imovel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_imovel" ):
                listener.exitDecl_imovel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_imovel" ):
                return visitor.visitDecl_imovel(self)
            else:
                return visitor.visitChildren(self)




    def decl_imovel(self):

        localctx = LPBParser.Decl_imovelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl_imovel)
        try:
            self.state = 36
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LPBParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.decl_casa()
                pass
            elif token in [LPBParser.T__9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                self.decl_apartamento()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Decl_casaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.num_blocos = None # DimensaoContext
            self.num_andares = None # DimensaoContext

        def dimensao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LPBParser.DimensaoContext)
            else:
                return self.getTypedRuleContext(LPBParser.DimensaoContext,i)


        def getRuleIndex(self):
            return LPBParser.RULE_decl_casa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_casa" ):
                listener.enterDecl_casa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_casa" ):
                listener.exitDecl_casa(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_casa" ):
                return visitor.visitDecl_casa(self)
            else:
                return visitor.visitChildren(self)




    def decl_casa(self):

        localctx = LPBParser.Decl_casaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl_casa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(LPBParser.T__3)
            self.state = 39
            self.match(LPBParser.T__4)
            self.state = 40
            self.match(LPBParser.T__5)
            self.state = 41
            localctx.num_blocos = self.dimensao()
            self.state = 42
            self.match(LPBParser.T__6)
            self.state = 43
            self.match(LPBParser.T__7)
            self.state = 44
            localctx.num_andares = self.dimensao()
            self.state = 45
            self.match(LPBParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Decl_apartamentoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dimensao(self):
            return self.getTypedRuleContext(LPBParser.DimensaoContext,0)


        def getRuleIndex(self):
            return LPBParser.RULE_decl_apartamento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_apartamento" ):
                listener.enterDecl_apartamento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_apartamento" ):
                listener.exitDecl_apartamento(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_apartamento" ):
                return visitor.visitDecl_apartamento(self)
            else:
                return visitor.visitChildren(self)




    def decl_apartamento(self):

        localctx = LPBParser.Decl_apartamentoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl_apartamento)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(LPBParser.T__9)
            self.state = 48
            self.match(LPBParser.T__4)
            self.state = 49
            self.match(LPBParser.T__5)
            self.state = 50
            self.dimensao()
            self.state = 51
            self.match(LPBParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CorpoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_andar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LPBParser.Decl_andarContext)
            else:
                return self.getTypedRuleContext(LPBParser.Decl_andarContext,i)


        def getRuleIndex(self):
            return LPBParser.RULE_corpo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCorpo" ):
                listener.enterCorpo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCorpo" ):
                listener.exitCorpo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCorpo" ):
                return visitor.visitCorpo(self)
            else:
                return visitor.visitChildren(self)




    def corpo(self):

        localctx = LPBParser.CorpoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_corpo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 53
                self.decl_andar()
                self.state = 56 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==LPBParser.T__10):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Decl_andarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM_INT(self):
            return self.getToken(LPBParser.NUM_INT, 0)

        def decl_planta(self):
            return self.getTypedRuleContext(LPBParser.Decl_plantaContext,0)


        def getRuleIndex(self):
            return LPBParser.RULE_decl_andar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_andar" ):
                listener.enterDecl_andar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_andar" ):
                listener.exitDecl_andar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_andar" ):
                return visitor.visitDecl_andar(self)
            else:
                return visitor.visitChildren(self)




    def decl_andar(self):

        localctx = LPBParser.Decl_andarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_decl_andar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(LPBParser.T__10)
            self.state = 59
            self.match(LPBParser.NUM_INT)
            self.state = 60
            self.match(LPBParser.T__1)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LPBParser.T__12:
                self.state = 61
                self.decl_planta()


            self.state = 64
            self.match(LPBParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Decl_plantaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_comodos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LPBParser.Decl_comodosContext)
            else:
                return self.getTypedRuleContext(LPBParser.Decl_comodosContext,i)


        def decl_moveis(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LPBParser.Decl_moveisContext)
            else:
                return self.getTypedRuleContext(LPBParser.Decl_moveisContext,i)


        def getRuleIndex(self):
            return LPBParser.RULE_decl_planta

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_planta" ):
                listener.enterDecl_planta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_planta" ):
                listener.exitDecl_planta(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_planta" ):
                return visitor.visitDecl_planta(self)
            else:
                return visitor.visitChildren(self)




    def decl_planta(self):

        localctx = LPBParser.Decl_plantaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_decl_planta)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(LPBParser.T__12)
            self.state = 67
            self.match(LPBParser.T__1)
            self.state = 69 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 68
                    self.decl_comodos()

                else:
                    raise NoViableAltException(self)
                self.state = 71 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LPBParser.T__18:
                self.state = 73
                self.decl_moveis()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(LPBParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Decl_comodosContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_bloco(self):
            return self.getTypedRuleContext(LPBParser.Id_blocoContext,0)


        def var_comodo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LPBParser.Var_comodoContext)
            else:
                return self.getTypedRuleContext(LPBParser.Var_comodoContext,i)


        def getRuleIndex(self):
            return LPBParser.RULE_decl_comodos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_comodos" ):
                listener.enterDecl_comodos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_comodos" ):
                listener.exitDecl_comodos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_comodos" ):
                return visitor.visitDecl_comodos(self)
            else:
                return visitor.visitChildren(self)




    def decl_comodos(self):

        localctx = LPBParser.Decl_comodosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_decl_comodos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.id_bloco()
            self.state = 82
            self.match(LPBParser.T__14)
            self.state = 83
            self.match(LPBParser.T__15)
            self.state = 84
            self.var_comodo()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LPBParser.T__6:
                self.state = 85
                self.match(LPBParser.T__6)
                self.state = 86
                self.var_comodo()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Decl_moveisContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_bloco(self):
            return self.getTypedRuleContext(LPBParser.Id_blocoContext,0)


        def IDENT(self):
            return self.getToken(LPBParser.IDENT, 0)

        def tipo_movel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LPBParser.Tipo_movelContext)
            else:
                return self.getTypedRuleContext(LPBParser.Tipo_movelContext,i)


        def getRuleIndex(self):
            return LPBParser.RULE_decl_moveis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_moveis" ):
                listener.enterDecl_moveis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_moveis" ):
                listener.exitDecl_moveis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_moveis" ):
                return visitor.visitDecl_moveis(self)
            else:
                return visitor.visitChildren(self)




    def decl_moveis(self):

        localctx = LPBParser.Decl_moveisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_decl_moveis)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.id_bloco()
            self.state = 93
            self.match(LPBParser.T__16)
            self.state = 94
            self.match(LPBParser.IDENT)
            self.state = 95
            self.match(LPBParser.T__14)
            self.state = 96
            self.match(LPBParser.T__17)
            self.state = 97
            self.tipo_movel()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LPBParser.T__6:
                self.state = 98
                self.match(LPBParser.T__6)
                self.state = 99
                self.tipo_movel()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_blocoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM_INT(self):
            return self.getToken(LPBParser.NUM_INT, 0)

        def getRuleIndex(self):
            return LPBParser.RULE_id_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_bloco" ):
                listener.enterId_bloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_bloco" ):
                listener.exitId_bloco(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_bloco" ):
                return visitor.visitId_bloco(self)
            else:
                return visitor.visitChildren(self)




    def id_bloco(self):

        localctx = LPBParser.Id_blocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_id_bloco)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(LPBParser.T__18)
            self.state = 106
            self.match(LPBParser.NUM_INT)
            self.state = 107
            self.match(LPBParser.T__19)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_comodoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(LPBParser.IDENT, 0)

        def tipo_comodo(self):
            return self.getTypedRuleContext(LPBParser.Tipo_comodoContext,0)


        def dimensao(self):
            return self.getTypedRuleContext(LPBParser.DimensaoContext,0)


        def getRuleIndex(self):
            return LPBParser.RULE_var_comodo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_comodo" ):
                listener.enterVar_comodo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_comodo" ):
                listener.exitVar_comodo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_comodo" ):
                return visitor.visitVar_comodo(self)
            else:
                return visitor.visitChildren(self)




    def var_comodo(self):

        localctx = LPBParser.Var_comodoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_var_comodo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(LPBParser.IDENT)
            self.state = 110
            self.tipo_comodo()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LPBParser.T__34:
                self.state = 111
                self.dimensao()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Tipo_comodoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LPBParser.RULE_tipo_comodo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_comodo" ):
                listener.enterTipo_comodo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_comodo" ):
                listener.exitTipo_comodo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo_comodo" ):
                return visitor.visitTipo_comodo(self)
            else:
                return visitor.visitChildren(self)




    def tipo_comodo(self):

        localctx = LPBParser.Tipo_comodoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_tipo_comodo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LPBParser.T__20) | (1 << LPBParser.T__21) | (1 << LPBParser.T__22) | (1 << LPBParser.T__23) | (1 << LPBParser.T__24) | (1 << LPBParser.T__25))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Tipo_movelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LPBParser.RULE_tipo_movel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_movel" ):
                listener.enterTipo_movel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_movel" ):
                listener.exitTipo_movel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo_movel" ):
                return visitor.visitTipo_movel(self)
            else:
                return visitor.visitChildren(self)




    def tipo_movel(self):

        localctx = LPBParser.Tipo_movelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_tipo_movel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LPBParser.T__26) | (1 << LPBParser.T__27) | (1 << LPBParser.T__28) | (1 << LPBParser.T__29) | (1 << LPBParser.T__30) | (1 << LPBParser.T__31) | (1 << LPBParser.T__32) | (1 << LPBParser.T__33))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DimensaoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM_INT(self):
            return self.getToken(LPBParser.NUM_INT, 0)

        def getRuleIndex(self):
            return LPBParser.RULE_dimensao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDimensao" ):
                listener.enterDimensao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDimensao" ):
                listener.exitDimensao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimensao" ):
                return visitor.visitDimensao(self)
            else:
                return visitor.visitChildren(self)




    def dimensao(self):

        localctx = LPBParser.DimensaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_dimensao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(LPBParser.T__34)
            self.state = 119
            self.match(LPBParser.NUM_INT)
            self.state = 120
            self.match(LPBParser.T__35)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





